kubernetes/apps/default/home-assistant/config/endpoint-slice.yaml
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: home-assistant-rpi
  labels:
    kubernetes.io/service-name: home-assistant
addressType: IPv4
ports:
  - name: '' # empty because port 8123 is not assigned as a well-known
             # port (by IANA)
    appProtocol: http
    protocol: TCP
    port: 8123
endpoints:
  - addresses:
      - "10.49.0.9"
    conditions:
      ready: true
