kubernetes/apps/default/home-assistant/config/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
spec:
  clusterIP: "None"
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8123
