kubernetes/apps/default/home-assistant/config/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    external-dns.home.arpa/enabled: "true"
    hajimari.io/icon: video-input-antenna
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - &host "home.${SECRET_DOMAIN}"
      secretName: home-assistant-tls
  rules:
    - host: *host
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: home-assistant
                port:
                  number: 8123
